# enpm702-summer-2025-ROS

./: .gitignore  README.md
Lecture10/bot_controller_demo/: CMakeLists.txt  package.xml
Lecture10/bot_controller_demo/include/bot_controller_demo/: proportional_controller.hpp  random_controller.hpp
Lecture10/bot_controller_demo/launch/: proportional_controller.launch.py  random_controller.launch.py
Lecture10/bot_controller_demo/src/: proportional_controller.cpp  random_controller.cpp
Lecture10/executors_demo/: package.xml
Lecture10/launch_files_demo/: package.xml
Lecture10/parameters_demo/: CMakeLists.txt  package.xml
Lecture10/parameters_demo/config/: parameters_demo.yaml
Lecture10/parameters_demo/src/: camera_demo.cpp
Lecture10/remapping_demo/: CMakeLists.txt  package.xml
Lecture10/remapping_demo/launch/: demo3.launch.py
Lecture10/robot_custom_interfaces/: CMakeLists.txt  package.xml
Lecture10/robot_interface_demo/: CMakeLists.txt  package.xml
Lecture11/lifecycle_demo/: package.xml
Lecture11/lifecycle_demo/src/: sensor_publisher.cpp
Lecture11/qos_demo/src/: sensor_monitor.cpp
Lecture9/doc/: bash_functions.txt
Lecture9/first_package/: CMakeLists.txt
Lecture9/publisher_demo/: CMakeLists.txt
